@@ -12,6 +12,7 @@ export(truelength, alloc.col, ":=")
 export(setattr, setnames, setcolorder, set)
 export(chmatch, "%chin%", chorder, chgroup)
 export(rbindlist)
+export(read)
 
 S3method("[", data.table)
 S3method("[<-", data.table)
